--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,6 +3,15 @@ $main-color: #9356DC;
 $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
 
+$body-background-color: #F7F7F7;
+$main-title-color: #101010;
+$dark-grey-color: #353535;
+$location-background-color: #EAEAEA;
+$main-icon-color: #7E7E7E;
+$new-label-color: #008766;
+$new-label-background-color: #99E2D0;
+
+
 
 // General
 * {
@@ -10,6 +19,269 @@ $tertiary-color: #99E2D0;
     margin: 0;
 }
 
-h1{
-    font-family: 'Shrikhand', sans-serif;
+body {
+    background-color: $body-background-color;
 }
+
+.main-title { 
+    font-family: 'Shrikhand', sans-serif;
+    color: $main-title-color;
+    font-size: 30px;
+    font-weight: 400;
+}
+
+.secondary-title {
+    font-size: 24px;
+    font-weight: 700;
+
+    &--presentation {
+        padding: 0 50px;
+    }
+
+    &--section {
+        padding: 50px 20px 20px 20px;
+    }
+}
+
+
+// Header
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+    padding: 15px 0 5px 0;
+    margin-bottom: 4px;
+}
+
+
+// Section "location"
+.location {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    color: $dark-grey-color;
+    background-color: $location-background-color;
+    padding: 12px 0 16px 0;
+    font-size: 18px;
+}
+
+.location__text {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+
+// Section "presentation"
+.presentation {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    row-gap: 12px;
+    padding: 40px 0;
+}
+
+.presentation__text {
+    color: $dark-grey-color;
+    font-size: 18px;
+    font-weight: 300;
+    padding: 0 30px;
+}
+
+.presentation__button {
+    background: linear-gradient(0deg, $main-color -11%, $secondary-color 124%);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+    text-decoration: none;
+    color: white;
+    font-size: 16px;
+    font-weight: 500;
+    border-radius: 25px;
+    padding: 15px 21px;
+    margin: 15px;
+}
+
+
+// Section "functioning"
+.functioning {
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding-bottom: 65px;
+}
+
+.functioning__contener {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    gap: 25px;
+    padding: 10px 40px 0 55px;
+}
+
+.functioning__step {
+    display: flex;
+    align-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    background-color: $body-background-color;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+    font-size: 16px;
+    font-weight: 500;
+    padding: 20px;
+}
+
+.step-number {
+    position: absolute;
+    left: -12px;
+    width: 24px;
+    height: 24px;
+    background-color: $main-color;
+    color: white;
+    font-size: 14px;
+    font-weight: 500;
+    text-align: center;
+    line-height: 25px;
+    border-radius: 15px;
+}
+
+.step-icon {
+    width: 25px;
+    color: $main-icon-color;
+    padding : 15px;
+
+    &--purple {
+        color: $main-color;
+    }
+}
+
+
+// Section "restaurants"
+.restaurants {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 65px;
+}
+
+.restaurants__contener {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 0 20px;
+}
+
+.restaurants__card {
+    display: flex;
+    flex-direction: column;
+    border-radius: 15px;
+    background-color: white;
+}
+
+.no-decoration {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    text-decoration: none;
+    color:black
+}
+
+.new-label {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    width: 80px;
+    height: 29px;
+    font-size: 14px;
+    font-weight: 500;
+    text-align: center;
+    line-height: 29px;
+    color: $new-label-color;
+    background-color: $new-label-background-color;
+}
+
+.card-img {
+    width: 100%;
+    height: 175px;
+    object-fit: cover;
+    border-radius: 15px 15px 0 0;
+}
+
+.card-content {
+    display: flex;
+    width: 100%;
+    padding: 16px 12px;
+}
+
+.card-txt {
+    display: flex;
+    flex-direction: column;
+    width: 85%;
+    gap: 5px;
+}
+
+.card-title {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.card-subtitle {
+    font-size: 17px;
+    font-weight: 300;
+}
+
+.card-heart {
+    width: 15%;
+    padding: 5px;
+}
+
+
+// Footer
+.footer {
+    display: flex;
+    flex-direction: column;
+    background-color: $dark-grey-color;
+    color: white;
+    padding: 20px 25px;
+    gap: 15px;
+}
+
+.footer__logo {
+    font-family: 'Shrikhand', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.footer__contener {
+    display: flex;
+    flex-direction: column;
+    font-size: 16px;
+    gap: 10px;
+}
+
+.footer__icon-links {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: 500;
+}
+
+.footer__icon {
+    width: 15px;
+}
+
+.footer__links {
+    font-weight: 400;
+}
+
+.footer__contact {
+    text-decoration: none;
+    color: white;
+}
+
