--- a/sass/style.scss
+++ b/sass/style.scss
@@ -172,8 +172,8 @@ header {
 .restaurants__contener {
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    padding: 0 20px;
+    gap: 17px;
+    padding: 0 17px;
 }
 
 .restaurants__card {
@@ -187,13 +187,32 @@ header {
     width: 100%;
     display: flex;
     flex-direction: column;
-    position: relative;
     text-decoration: none;
     color:black
 }
 
+.card-img-contener {
+    display: flex;
+    position: relative;
+    overflow : hidden;
+    width: 100%;
+    height: 175px;
+    border-radius: 15px 15px 0 0;
+}
+
+.card-img {
+    position: absolute;
+    top: -56px;
+    left: -2px;
+    width: 346px;
+    height: 231px;
+    object-fit: cover;
+    border-radius: 15px 15px 0 0;
+}
+
 .new-label {
     position: absolute;
+    z-index: 1;
     top: 12px;
     right: 12px;
     width: 80px;
@@ -204,13 +223,6 @@ header {
     line-height: 29px;
     color: $new-label-color;
     background-color: $new-label-background-color;
-}
-
-.card-img {
-    width: 100%;
-    height: 175px;
-    object-fit: cover;
-    border-radius: 15px 15px 0 0;
 }
 
 .card-content {
