--- a/assets/style.css
+++ b/assets/style.css
@@ -5,35 +5,237 @@
 
 body {
   background-color: #F7F7F7;
+  position: relative;
 }
 
-.main-title {
+.title {
+  font-size: 24px;
+  font-weight: 700;
+}
+.title--presentation {
+  padding: 0 50px;
+}
+.title--section {
+  padding: 50px 20px 20px 20px;
+}
+
+.menu-title {
   font-family: "Shrikhand", sans-serif;
   color: #101010;
   font-size: 30px;
   font-weight: 400;
 }
 
-.secondary-title {
-  font-size: 24px;
-  font-weight: 700;
-}
-.secondary-title--presentation {
-  padding: 0 50px;
-}
-.secondary-title--section {
-  padding: 50px 20px 20px 20px;
+.loader-page {
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+  background-color: #F7F7F7;
+  animation: loader 2.8s forwards;
 }
 
-header {
+@keyframes loader {
+  0%, 80% {
+    opacity: 1;
+    z-index: 5;
+  }
+  100% {
+    opacity: 0;
+    z-index: -3;
+  }
+}
+.loader-contener {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  width: 250px;
+  height: 250px;
+  z-index: 6;
+  background-color: #F7F7F7;
+}
+
+.cutting-board {
+  position: absolute;
+  margin: auto;
+  width: 100px;
+  height: 6px;
+  z-index: 7;
+  background: linear-gradient(0deg, #9356DC -11%, #FF79DA 124%);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 25px;
+}
+
+.knife {
+  position: absolute;
+  top: 107px;
+  left: 100px;
+  z-index: 8;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  animation: knife-mvt 2s forwards;
+}
+.knife .blade {
+  width: 50px;
+  height: 15px;
+  z-index: 8;
+  background: linear-gradient(0deg, #9356DC -11%, #FF79DA 124%);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 100% 0% 42% 58%/0% 100% 0% 100%;
+}
+.knife .handle {
+  width: 35px;
+  height: 8px;
+  z-index: 8;
+  background: linear-gradient(0deg, #9356DC -11%, #FF79DA 124%);
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 0 25px 25px 0;
+}
+
+@keyframes knife-mvt {
+  0% {
+    transform: rotate(60deg) translateY(-50px);
+  }
+  12% {
+    transform: translateY(0) rotate(0);
+  }
+  30% {
+    transform: translateX(5px) rotate(60deg) translateY(-50px);
+  }
+  40% {
+    transform: translateX(5px) rotate(0) translateY(0);
+  }
+  54% {
+    transform: translateX(10px) rotate(60deg) translateY(-50px);
+  }
+  64% {
+    transform: translateX(10px) rotate(0) translateY(0);
+  }
+  74%, 100% {
+    transform: translateX(15px) rotate(60deg) translateY(-50px);
+  }
+}
+.carrot {
+  position: absolute;
+  top: 105px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 60px;
+  height: 15px;
+  z-index: 7;
+  background: linear-gradient(0deg, #9356DC -10%, #FF79DA 30%);
+  border-radius: 12% 88% 89% 11%/54% 47% 53% 46%;
+  animation: carrot-mvt 170ms 1700ms ease-in forwards;
+}
+.carrot .cut {
+  position: absolute;
+  width: 3px;
+  height: 16px;
+  z-index: 7;
+  background-color: #F7F7F7;
+  opacity: 0;
+}
+.carrot .cut-1 {
+  left: 25%;
+  animation: carrot-cut-1 150ms 220ms linear forwards;
+}
+.carrot .cut-2 {
+  left: 50%;
+  animation: carrot-cut-2 150ms 750ms linear forwards;
+}
+.carrot .cut-3 {
+  left: 75%;
+  animation: carrot-cut-3 150ms 1220ms linear forwards;
+}
+
+@keyframes carrot-mvt {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(100px);
+    opacity: 0;
+  }
+}
+@keyframes carrot-cut-1 {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes carrot-cut-2 {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes carrot-cut-3 {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.loading-bar {
+  position: absolute;
+  top: 180px;
+  margin-left: auto;
+  margin-bottom: auto;
+  width: 200px;
+  height: 15px;
+  z-index: 6;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 25px;
+}
+.loading-bar .progress {
+  position: relative;
+  width: 0%;
+  height: 100%;
+  background: linear-gradient(90deg, #9356DC -11%, #FF79DA 124%);
+  border-radius: 25px;
+  animation: loading 1300ms cubic-bezier(0.69, 0.02, 0.89, 0.7) forwards;
+}
+
+@keyframes loading {
+  0% {
+    width: 0%;
+  }
+  25%, 27% {
+    width: 20%;
+  }
+  60%, 62% {
+    width: 60%;
+  }
+  100% {
+    width: 100%;
+  }
+}
+.header {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: white;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
-  padding: 15px 0 5px 0;
+  padding: 20px 0 10px 0;
   margin-bottom: 4px;
+}
+.header__logo {
+  width: 162px;
+  height: auto;
 }
 
 .location {
@@ -46,7 +248,6 @@ header {
   padding: 12px 0 16px 0;
   font-size: 18px;
 }
-
 .location__text {
   font-size: 16px;
   font-weight: 500;
@@ -61,7 +262,6 @@ header {
   row-gap: 12px;
   padding: 40px 0;
 }
-
 .presentation__text {
   color: #353535;
   font-size: 18px;
@@ -70,15 +270,39 @@ header {
 }
 
 .presentation__button {
+  position: relative;
+  z-index: 0;
+  text-decoration: none;
   background: linear-gradient(0deg, #9356DC -11%, #FF79DA 124%);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-  text-decoration: none;
-  color: white;
-  font-size: 16px;
-  font-weight: 500;
   border-radius: 25px;
   padding: 15px 21px;
   margin: 15px;
+}
+.presentation__button .button-text {
+  position: relative;
+  z-index: 2;
+  color: white;
+  font-size: 16px;
+  font-weight: 500;
+}
+.presentation__button::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0;
+  z-index: -1;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(0deg, #9356DC -5.2%, #FF79DA 110.74%);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.35);
+  border-radius: 25px;
+  transition: opacity 500ms;
+}
+.presentation__button:hover::after {
+  opacity: 1;
+  z-index: 1;
 }
 
 .functioning {
@@ -87,7 +311,6 @@ header {
   background-color: white;
   padding-bottom: 65px;
 }
-
 .functioning__contener {
   display: flex;
   flex-direction: column;
@@ -96,7 +319,6 @@ header {
   gap: 25px;
   padding: 10px 40px 0 55px;
 }
-
 .functioning__step {
   display: flex;
   align-content: center;
@@ -130,7 +352,7 @@ header {
   color: #7E7E7E;
   padding: 15px;
 }
-.step-icon--purple {
+.step-icon:hover {
   color: #9356DC;
 }
 
@@ -219,9 +441,47 @@ header {
   font-weight: 300;
 }
 
-.card-heart {
-  width: 15%;
-  padding: 5px;
+.heart-contener {
+  position: relative;
+  width: 18%;
+}
+.heart-contener .check-heart {
+  position: absolute;
+  left: -9999px;
+}
+.heart-contener .empty-heart {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
+  opacity: 1;
+  padding-top: 18px;
+  cursor: pointer;
+}
+.heart-contener .colored-heart {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  z-index: -1;
+  opacity: 0;
+  padding-top: 18px;
+  cursor: pointer;
+  color: transparent;
+  background-image: linear-gradient(180deg, #9356DC 10%, #FF79DA 70%);
+  background-clip: text;
+  transition: opacity 700ms;
+}
+.heart-contener .check-heart:checked + label .colored-heart {
+  z-index: 2;
+  opacity: 1;
+}
+.heart-contener .check-heart:checked + label .empty-heart {
+  z-index: -1;
+  opacity: 0;
 }
 
 .footer {
@@ -232,38 +492,32 @@ header {
   padding: 20px 25px;
   gap: 15px;
 }
-
-.footer__logo {
+.footer__title {
   font-family: "Shrikhand", sans-serif;
   font-size: 18px;
   font-weight: 400;
 }
-
 .footer__contener {
   display: flex;
   flex-direction: column;
   font-size: 16px;
   gap: 10px;
 }
-
-.footer__icon-links {
+.footer__contener__icon-links {
   display: flex;
   align-items: center;
   gap: 10px;
   font-weight: 500;
 }
-
-.footer__icon {
-  width: 15px;
-}
-
-.footer__links {
+.footer__contener__links {
   font-weight: 400;
 }
-
-.footer__contact {
+.footer__contener__contact {
   text-decoration: none;
   color: white;
+}
+.footer__icon {
+  width: 15px;
 }
 
 /*# sourceMappingURL=style.css.map */
