Ajout des medias queries de la page d'accueil

--- a/assets/style.css
+++ b/assets/style.css
@@ -15,8 +15,19 @@ body {
 .title--presentation {
   padding: 0 50px;
 }
+@media (min-width: 769px) {
+  .title--presentation {
+    font-size: 40px;
+    padding-bottom: 17px;
+  }
+}
 .title--section {
   padding: 50px 20px 20px 20px;
+}
+@media (min-width: 769px) {
+  .title--section {
+    padding: 30px 20px 30px 20px;
+  }
 }
 
 .menu-title {
@@ -34,9 +45,9 @@ body {
   align-items: center;
   width: 100%;
   height: 100%;
-  z-index: 5;
   background-color: #F7F7F7;
-  animation: loader 2.8s forwards;
+  opacity: 0;
+  z-index: -3;
 }
 
 @keyframes loader {
@@ -60,6 +71,7 @@ body {
   height: 250px;
   z-index: 6;
   background-color: #F7F7F7;
+  border: 1px solid black;
 }
 
 .cutting-board {
@@ -71,6 +83,7 @@ body {
   background: linear-gradient(0deg, #9356DC -11%, #FF79DA 124%);
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
   border-radius: 25px;
+  opacity: 0;
 }
 
 .knife {
@@ -82,6 +95,7 @@ body {
   flex-wrap: nowrap;
   justify-content: center;
   animation: knife-mvt 2s forwards;
+  opacity: 0;
 }
 .knife .blade {
   width: 50px;
@@ -133,7 +147,7 @@ body {
   z-index: 7;
   background: linear-gradient(0deg, #9356DC -10%, #FF79DA 30%);
   border-radius: 12% 88% 89% 11%/54% 47% 53% 46%;
-  animation: carrot-mvt 170ms 1700ms ease-in forwards;
+  opacity: 0;
 }
 .carrot .cut {
   position: absolute;
@@ -189,11 +203,135 @@ body {
     opacity: 1;
   }
 }
+.plate {
+  position: absolute;
+  margin: auto;
+  width: 100px;
+  height: 20px;
+  z-index: 6;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  border-radius: 50% 50% 50% 50%/50% 50% 50% 50%;
+  border: 3px solid #9356DC;
+}
+
+.meat-1 {
+  position: absolute;
+  top: 2px;
+  margin-left: 45px;
+  width: 40px;
+  height: 15px;
+  z-index: 6;
+  background: linear-gradient(90deg, #9356DC -11%, #FF79DA 124%);
+  border-radius: 24% 76% 77% 23%/45% 44% 56% 55%;
+}
+
+.meat-2 {
+  position: absolute;
+  top: 6px;
+  margin-left: 68px;
+  width: 10px;
+  height: 5px;
+  z-index: 6;
+  background-color: #F7F7F7;
+  border-radius: 50% 50% 50% 50%/50% 50% 50% 50%;
+}
+
+.vegetable {
+  position: absolute;
+  top: 2px;
+  margin-left: 17px;
+  width: 23px;
+  height: 13px;
+  z-index: 6;
+  background: linear-gradient(0deg, #9356DC -10%, #FF79DA 30%);
+  border-radius: 50% 50% 50% 50%/100% 100% 0% 0%;
+}
+
+.steam-1 {
+  position: absolute;
+  top: 5px;
+  margin-left: 10px;
+  z-index: 6;
+}
+
+.steam-2 {
+  position: absolute;
+  top: 0;
+  margin-left: 27px;
+  z-index: 6;
+}
+
+.steam-3 {
+  position: absolute;
+  top: 5px;
+  margin-left: 44px;
+  z-index: 6;
+}
+
+.steam-part-1 {
+  position: absolute;
+  top: -32px;
+  margin-left: 17px;
+  width: 12px;
+  height: 15px;
+  z-index: 6;
+  border-left: 3px solid #9356DC;
+  border-radius: 50%;
+}
+
+.steam-part-2 {
+  position: absolute;
+  top: -46px;
+  margin-left: 13px;
+  width: 12px;
+  height: 15px;
+  z-index: 6;
+  border-right: 3px solid #9356DC;
+  border-radius: 50%;
+}
+
+.steam-part-3 {
+  position: absolute;
+  top: -60px;
+  margin-left: 17px;
+  width: 12px;
+  height: 15px;
+  z-index: 6;
+  border-left: 3px solid #9356DC;
+  border-radius: 50%;
+}
+
+.bell {
+  position: absolute;
+  top: 90px;
+  margin-left: auto;
+  width: 80px;
+  height: 40px;
+  z-index: 6;
+  background-color: white;
+  border: 3px solid #9356DC;
+  border-radius: 48% 52% 47% 53%/82% 80% 20% 18%;
+  opacity: 0;
+}
+
+.bell-wrist {
+  position: absolute;
+  top: -10px;
+  margin-left: 33px;
+  width: 8px;
+  height: 8px;
+  z-index: 6;
+  background-color: white;
+  border: 3px solid #9356DC;
+  border-radius: 50%;
+  opacity: 0;
+}
+
 .loading-bar {
   position: absolute;
   top: 180px;
   margin-left: auto;
-  margin-bottom: auto;
+  margin-right: auto;
   width: 200px;
   height: 15px;
   z-index: 6;
@@ -206,7 +344,6 @@ body {
   height: 100%;
   background: linear-gradient(90deg, #9356DC -11%, #FF79DA 124%);
   border-radius: 25px;
-  animation: loading 1300ms cubic-bezier(0.69, 0.02, 0.89, 0.7) forwards;
 }
 
 @keyframes loading {
@@ -237,6 +374,18 @@ body {
   width: 162px;
   height: auto;
 }
+@media (min-width: 769px) {
+  .header__logo {
+    width: 200px;
+  }
+}
+@media (min-width: 769px) {
+  .header {
+    padding: 30px 0;
+    margin: 0;
+    box-shadow: none;
+  }
+}
 
 .location {
   display: flex;
@@ -252,6 +401,11 @@ body {
   font-size: 16px;
   font-weight: 500;
 }
+@media (min-width: 769px) {
+  .location {
+    padding: 16px 0;
+  }
+}
 
 .presentation {
   display: flex;
@@ -266,7 +420,12 @@ body {
   color: #353535;
   font-size: 18px;
   font-weight: 300;
-  padding: 0 30px;
+  padding: 0 30px 3px 30px;
+}
+@media (min-width: 769px) {
+  .presentation {
+    padding: 30px 0 15px 0;
+  }
 }
 
 .presentation__button {
@@ -308,29 +467,59 @@ body {
 .functioning {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   background-color: white;
   padding-bottom: 65px;
+}
+.functioning__margins {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  max-width: 1024px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .functioning__contener {
   display: flex;
   flex-direction: column;
-  align-content: center;
+  justify-content: center;
   align-items: center;
+  width: auto;
   gap: 25px;
-  padding: 10px 40px 0 55px;
+  margin: 0 17px 0 30px;
+}
+@media (min-width: 769px) {
+  .functioning__contener {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 32px;
+  }
 }
 .functioning__step {
   display: flex;
-  align-content: center;
   align-items: center;
   position: relative;
-  width: 100%;
+  width: 87%;
+  max-width: 282px;
   background-color: #F7F7F7;
   box-shadow: 0 4px 15px rgba(0, 0, 0, 0.15);
   border-radius: 20px;
   font-size: 16px;
   font-weight: 500;
   padding: 20px;
+}
+@media (min-width: 769px) {
+  .functioning__step {
+    width: 30%;
+  }
+}
+@media (min-width: 769px) {
+  .functioning {
+    padding: 20px 0 50px 0;
+  }
 }
 
 .step-number {
@@ -359,21 +548,55 @@ body {
 .restaurants {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
   padding-bottom: 65px;
 }
-
+.restaurants__margins {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  max-width: 1024px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .restaurants__contener {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: auto;
   gap: 17px;
   padding: 0 17px;
 }
-
+@media (min-width: 769px) {
+  .restaurants__contener {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    column-gap: 0;
+    row-gap: 50px;
+  }
+}
 .restaurants__card {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  max-width: 472px;
   border-radius: 15px;
   background-color: white;
+}
+@media (min-width: 769px) {
+  .restaurants__card {
+    width: 47.6%;
+  }
+}
+@media (min-width: 769px) {
+  .restaurants {
+    padding-bottom: 30px;
+  }
 }
 
 .no-decoration {
@@ -397,7 +620,7 @@ body {
   position: absolute;
   top: -56px;
   left: -2px;
-  width: 346px;
+  width: 100%;
   height: 231px;
   object-fit: cover;
   border-radius: 15px 15px 0 0;
@@ -473,7 +696,7 @@ body {
   color: transparent;
   background-image: linear-gradient(180deg, #9356DC 10%, #FF79DA 70%);
   background-clip: text;
-  transition: opacity 700ms;
+  transition: opacity 600ms;
 }
 .heart-contener .check-heart:checked + label .colored-heart {
   z-index: 2;
@@ -512,12 +735,30 @@ body {
 .footer__contener__links {
   font-weight: 400;
 }
+@media (min-width: 769px) {
+  .footer__contener__links {
+    padding: 0 10px 0 35px;
+  }
+}
 .footer__contener__contact {
   text-decoration: none;
   color: white;
 }
+@media (min-width: 769px) {
+  .footer__contener {
+    flex-direction: row;
+    align-items: center;
+  }
+}
 .footer__icon {
   width: 15px;
+}
+@media (min-width: 769px) {
+  .footer {
+    flex-direction: row-reverse;
+    padding: 60px 70px 30px 25px;
+    gap: 90px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
